--- a/docs/team/febee99.adoc
+++ b/docs/team/febee99.adoc
@@ -62,15 +62,12 @@ allowing the user to add items and have them arranged in an organised fashion.
 * *Minor enhancement*: added expiry date and quantity fields to item, and disallowed expiry dates before today.
 
 * *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=f11&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=febee99&tabRepo=AY1920S1-CS2103T-F11-2%2Fmain%5Bmaster%5D[Reposense]]
-[https://github.com[Functional code]] [https://github.com[Test code]]
-
+//[https://github.com[Functional code]] [https://github.com[Test code]]
 * *Other contributions*:
-
 ** Team tasks:
 *** Refactor Person to Item (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/3[#3])
-** Project management:
-*** Set up and maintaining the issue tracker, assign issues to team members for each milestone
-
+*** Set up and maintain the issue tracker, assign issues to team members for each milestone
+*** Integrated the team repo with Github's project board
 //*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
 ** *Enhancements to existing features:*
 
@@ -78,8 +75,7 @@ allowing the user to add items and have them arranged in an organised fashion.
 *** Add and restrict certain commands for replenish list with new parser created (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/198[#198])
 *** Allow storage of both lists in a single json object (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/122[#122])
 *** Suggest closely related words when command executed displays no results (Pull requests https://github.com/AY1920S1-CS2103T-F11-2/main/issues/92[#92], https://github.com/AY1920S1-CS2103T-F11-2/main/issues/121[#121])
-*** Add Sort Command (Pull requests https://github.com/AY1920S1-CS2103T-F11-2/main/issues/7[#7], https://github.com/AY1920S1-CS2103T-F11-2/main/issues/16[#16])
-*** Wrote tests for sort command and its dependencies (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/82[#82])
+*** Wrote Sort Command, and relevant tests for its dependencies (Pull requests https://github.com/AY1920S1-CS2103T-F11-2/main/issues/7[#7], https://github.com/AY1920S1-CS2103T-F11-2/main/issues/16[#16], https://github.com/AY1920S1-CS2103T-F11-2/main/issues/82[#82])
 *** Render commands stackable (Pull requests https://github.com/AY1920S1-CS2103T-F11-2/main/issues/71[#71])
 *** Auto-sort items added (Pull requests https://github.com/AY1920S1-CS2103T-F11-2/main/issues/51[#51], https://github.com/AY1920S1-CS2103T-F11-2/main/issues/79[#79])
 *** Disallow expiry dates before today (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/53[#53])
@@ -89,8 +85,7 @@ allowing the user to add items and have them arranged in an organised fashion.
 ** *Documentation:*
 *** Add sub-headings for commands with usage variations and a command summary table, re-ordered content: (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/126[#126])
 *** Add screenshots of app to User Guide for all commands: (Pull request https://github.com/AY1920S1-CS2103T-F11-2/main/issues/145[#145])
-** *Tools:*
-*** Integrated the team repo with Github's project board
+
 //_{you can add/remove categories in the list above}_
 
 == Contributions to the User Guide
