--- a/docs/team/soilingrogue.adoc
+++ b/docs/team/soilingrogue.adoc
@@ -43,15 +43,16 @@ This section serves to summarize my contributions to the project, namely feature
 * Highlight:
 
 === Code contributed
-* Implementation of context switching for user targeted commands [https://github.com[Functional code]] [https://github.com[Test code]]
+* Implementation of context switching for user targeted commands https://github.com/AY1920S1-CS2103T-T12-2/main/pull/1[#1] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/9[#9] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/44[#44] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/50[#50]
 * Implementation of Order Manager
-* Implementation of autocomplete feature
+* Implementation of autocomplete feature https://github.com/AY1920S1-CS2103T-T12-2/main/pull/98[#98] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/111[#111] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/188[#188] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/200[#200] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/205[#205]
 
 ==== Other contributions
 * Documentation
-** DG UG
+** Updated User Guide with texts and images for explaining universal commands https://github.com/AY1920S1-CS2103T-T12-2/main/pull/81[#81] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/83[#83] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/193[#193] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/232[#232]
+** Updated Developer Guide with UML diagrams and texts for explaining implementation of features https://github.com/AY1920S1-CS2103T-T12-2/main/pull/77[#77] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/85[#85] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/87[#87] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/217[#217] https://github.com/AY1920S1-CS2103T-T12-2/main/pull/234[#234]
 * Community
-** Reported bugs and suggestions for other teams (examples:  https://github.com/SoilingRogue/ped/issues/9[1], https://github.com/SoilingRogue/ped/issues/10[2], https://github.com/SoilingRogue/ped/issues/6[3])
+** Reported bugs and suggestions for other teams:  https://github.com/SoilingRogue/ped/issues/9[1], https://github.com/SoilingRogue/ped/issues/10[2], https://github.com/SoilingRogue/ped/issues/6[3]
 ** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
 * Project management
 ** Managed releases `v1.2` - `v1.4` (3 releases) on GitHub
