--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -231,44 +231,46 @@ The reminders implementation is facilitated by the reminder class, and heavily m
 
 image::ReminderClassDiagram.png[]
 
-* The class diagram above shows the relation between the classes that help to implement the reminder feature.
+====== The class diagram above shows the relation between the classes that help to implement the reminder feature.
 
-====== There are 2 types of reminders. General and entry reminders. 
+===== There are 2 types of reminders. General and entry reminders. 
 
 General reminders are not tied to any specific entry, and sent the user notifications whenever an entry matching the user specified conditions is entered in the app. These specified conditions include entry type, a lower and upper quota for the entry amount, a specified time period in which an entry takes place, or a list of tags which the entry must have.
 
-image::GeneralReminderSequenceDiagram.png[]
+image::GeneralReminderSequenceDiagram.png[GRS, 1000, 420]
 
-* The sequence diagram above illustrates what happens when an entry fulfils all conditions in an entry.
+====== The sequence diagram above illustrates what happens when an entry fulfils all conditions in an entry.
 
-1)  When an expense is logged in to GuiltTrip.java, in addition to being stored in the Expense List, the expense is also passed into the Condition Manager, which iterates through its list of conditions to see which conditions are met by the entry. 
+STEP 1)  When an expense is logged in to GuiltTrip.java, in addition to being stored in the Expense List, the expense is also passed into the Condition Manager, which iterates through its list of conditions to see which conditions are met by the entry. 
 
-2)  Each condition makes use of a self-implemented ObservableSupport class that enables it to function as an Observable object, with the reminders being its listeners. 
+STEP 2)  Each condition makes use of a self-implemented ObservableSupport class that enables it to function as an Observable object, with the reminders being its listeners. 
 
-3)  When a condition is met, it notifies the reminder it belongs to. The reminders keep track of the number of conditions met, and only when all conditions are met does it make use of ObservableSupport to notify the reminderlist about a change in its status. 
+STEP 3)  When a condition is met, it notifies the reminder it belongs to. The reminders keep track of the number of conditions met, and only when all conditions are met does it make use of ObservableSupport to notify the reminderlist about a change in its status. 
 
-4)  The reminder list generates a notification corresponding to the reminder and adds it to an observable list which is displayed by the Ui. 
+STEP 4)  The reminder list generates a notification corresponding to the reminder and adds it to an observable list which is displayed by the Ui. 
 
-5)  The number of conditions met is reset a the end of the process so the reminders may continue to produce notifications when subsequent entries meeting the requirements are keyed into the system.
+STEP 5)  The number of conditions met is reset a the end of the process so the reminders may continue to produce notifications when subsequent entries meeting the requirements are keyed into the system.
 
 An entry reminder targets a specific expense/ income or wish. It is set to send notifications at a specified period at specified intervals before the date of the event.
 
-image::EntryReminderSequenceDiagram.png[]
+image::EntryReminderSequenceDiagram.png[ERS, 1000, 420]
 
-1) This is made possible with TimeUtil, which is a singleton class with a single instance checking the local date at periodic intervals and updating its listeners (Using the ObservableSupport) of the current date. 
+====== The sequence diagram above illustrates what happens when an it is time for an entry reminder to send a notification.
 
-2) All entry reminders are listeners of TimeUtil. When the updated current date equals the date to send a notification, it notifies the reminder list which generates a corresponding notification and sets the next date to notify the user. 
+STEP 1) This is made possible with TimeUtil, which is a singleton class with a single instance checking the local date at periodic intervals and updating its listeners (Using the ObservableSupport) of the current date. 
 
-3) Once the date of the event itself has passed, the reminder is deactivated and not saved the next time GuiltTrip is closed.
+STEP 2) All entry reminders are listeners of TimeUtil. When the updated current date equals the date to send a notification, it notifies the reminder list which generates a corresponding notification and sets the next date to notify the user. 
+
+STEP 3) Once the date of the event itself has passed, the reminder is deactivated and not saved the next time GuiltTrip is closed.
 
 === Design Considerations:
-1)	Alternative 1 (current method): Users must first select a reminder before they can edit or remove reminders.
-Pros: Easier to implement. By automatically toggling the reminder list view on when selecting a reminder, the user also will see what reminder they have selected before they proceed to make any changes. (As opposed to selecting and modifying the reminder in a single command).
-Cons: Involves one more step. Not as efficient.
+* **Alternative 1** (current method): Users must first select a reminder before they can edit or remove reminders.* 
+** Pros: Easier to implement. By automatically toggling the reminder list view on when selecting a reminder, the user also will see what    reminder they have selected before they proceed to make any changes. (As opposed to selecting and modifying the reminder in a single    command).
+** Cons: Involves one more step. Not as efficient.
 
-2)	Alternative 2: Users commands require an index argument to indicate the reminder to modify.
-Pros: Faster as it involves one less step. May be more convenient for users who frequently forget to first select reminder to modify.
-Cons: Aforementioned benefits are mitigated as reminders are hidden in default GUI settings, and most users will have to open up the reminderList to know which reminder to modify anyway.
+* **Alternative 2** Users commands require an index argument to indicate the reminder to modify.
+** Pros: Faster as it involves one less step. May be more convenient for users who frequently forget to first select reminder to modify.
+** Cons: Aforementioned benefits are mitigated as reminders are hidden in default GUI settings, and most users will have to open up the    reminderList to know which reminder to modify anyway.
 
 === Undo/ Redo
 
@@ -485,33 +487,55 @@ Use Case: user adds an expense
 . The user types listAutoExpenditure.
 . GuiltTrip lists all the current automatically recurring expenditures.
 
-=== Use Case 09: Set GeneralReminder
+=== Use Case 09: Add GeneralReminder
 
 ==== MSS
 
-. User adds a GeneralReminder, indicates the quota which if exceeded will activate the reminder, and the tags/ keywords that entries should have to be tracked;
-. guiltTrip() notifies user that Reminder has been added.
+. 1. User adds a GeneralReminder, indicates the reminder header, entry type/ lower bound/ upper bound/ start date/ end date/ and tags that a entry must have to trigger a notification.
+. 2. guiltTrip() notifies user that Reminder has been added.
 
 Use case ends.
 
 ==== Extensions
 
-. 1a. user does not indicate if he wants to track entries with keywords or tags.
-Reminder tracks all entries.
+. 1a. user does not indicate any parameters.
+  . 1a1. GuiltTrip requests for correct parameters.
 
-=== Use Case 10: Set TargetedReminder
+=== Use Case 10: Set EntryReminder
 
 ==== MSS
 
-. User adds a TargetedReminder, indicate the index of the entry to target and the period before the entry date to activate reminder.
-. guiltTrip() notifies user that Reminder has been added.
+. 1. User adds an EntryReminder indicating the index of the entry in the list the reminder header, type of entry, period before the entry date to activate reminder and frequency of notifications.
+. 2. GuiltTrip notifies user that Reminder has been added.
+
+Use case ends.
+
+==== Extensions
+
+. 1a. Entry Date before Current Date.
+  . 1a1. GuiltTrip notifies user that reminder can only be created for events after today.
+. 1b. Ineterval between notificaitons larger than period.
+  . 1b1. GuiltTrip notifies user that frequency must be smaller than period.
+  
+ === Use Case 11: Edit Reminder
+
+==== MSS
+
+. 1. User selects a reminder by the selectReminder() commmand.
+. 2. GuiltTrip notifies user that Reminder has been selected.
+. 3. User Edits Header/ Conditions/ Period/ Frequency of Reminder.
+. 4. GuiltTrip notifies user that Reminder has been edited.
 
 Use case ends.
 
 ==== Extensions
 
 . 1a. index out of bounds.
-Use case ends
+  . 1a1. GuiltTrip requests for suitable index.
+. 1b. User tries to set frequency/ period for a General Reminder
+  . 1b1. GuiltTrip notifies user that reminder can only be created for events after today.
+. 1c. Ineterval between notificaitons larger than period.
+  . 1c1. GuiltTrip notifies user that frequency must be smaller than period.
 
 [appendix]
 == Non Functional Requirements
