--- a/docs/team/carbongrid.adoc
+++ b/docs/team/carbongrid.adoc
@@ -65,3 +65,4 @@ include::../UserGuide.adoc[tag=reactiveSearchUG]
 
 include::../DeveloperGuide.adoc[tag=autocomplete]
 include::../DeveloperGuide.adoc[tag=reactivesearch]
+include::../DeveloperGuide.adoc[tag=carbongridContribManualTesting]
